tests/baselines/reference/constructorOverloads1.errors.txt
==== tests/cases/compiler/constructorOverloads1.ts (5 errors) ====
    class Foo {
        constructor(s: string);
        constructor(n: number);
        constructor(x: any) {
    
        }
        constructor(x: any) {
        ~~~~~~~~~~~~~~~~~~~~~
    
    
        }
    ~~~~~
!!! constructorOverloads1.ts(7,5): error TS2070: Multiple constructor implementations are not allowed.
        bar1() {  /*WScript.Echo("bar1");*/ }
        bar2() {  /*WScript.Echo("bar1");*/ }
    }
    
    var f1 = new Foo("hey");
    var f2 = new Foo(0);
    var f3 = new Foo(f1);
                 ~~~
!!! constructorOverloads1.ts(16,14): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'Foo'.
                 ~~~
!!! constructorOverloads1.ts(16,14): error TS2085: Could not select overload for 'new' expression.
    var f4 = new Foo([f1,f2,f3]);
                 ~~~
!!! constructorOverloads1.ts(17,14): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'any[]'.
                 ~~~
!!! constructorOverloads1.ts(17,14): error TS2085: Could not select overload for 'new' expression.
    
    f1.bar1();
    f1.bar2();
    